# urus.ai

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  build.rs  build.sh  package-lock.json  package.json  postcss.config.js  tailwind.config.js
ci/: azure-install-rust.yml  azure-pipelines-template.yml
migrations/2018-12-17-154625_create_users/: down.sql  up.sql
migrations/2018-12-21-151617_urls/: up.sql
migrations/2019-06-06-130550_create_user_tokens/: down.sql  up.sql
nginx/: nginx.conf  urus.ai.conf
nginx/modules/: general.conf  letsencrypt.conf
public/: robots.txt  site.webmanifest
src/: db.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  schema.rs  templates.rs  utils.rs
src/db/: implementation.rs  messages.rs  mock.rs  session.rs  url.rs  user.rs
src/db/implementation/: url.rs  user.rs
src/db/implementation/session/: create.rs
src/db/implementation/url/: create.rs  read.rs
src/db/implementation/user/: create.rs  password_change.rs  read.rs  read_profile.rs  verify.rs
src/db/messages/: session.rs  url.rs  user.rs
src/db/mock/: session.rs  url.rs  user.rs
src/db/mock/session/: create.rs
src/db/mock/url/: create.rs  read.rs
src/db/mock/user/: create.rs  password_change.rs  read.rs  read_profile.rs  verify.rs
src/db/url/: create.rs  read.rs
src/db/user/: create.rs  password_change.rs  read.rs  read_profile.rs  verify.rs
src/handlers/: api.rs  app.rs
src/handlers/api/: session.rs  url.rs  user.rs
src/handlers/api/session/: create.rs  delete.rs
src/handlers/api/url/: create.rs  read.rs
src/handlers/api/user/: create.rs  password_change.rs  verify.rs
src/handlers/app/: index.rs  login.rs  profile.rs  register.rs
src/handlers/app/profile/: account.rs  urls.rs
src/models/: message.rs  short_url.rs  user.rs  user_token.rs
src/utils/: load_user.rs  validate_and_hash_password.rs  verify_password.rs
src/worker/: handlers.rs  main.rs  templates.rs
src/worker/handlers/: activation.rs
style/: common.css  style.css
style/components/: nav.css  table.css
templates/: base.html  index.html  login.html  profile.html  register.html
templates/components/: message.html  nav.html
templates/email/: activation.html
templates/profile/: account.html  urls.html
urusai_codegen/: Cargo.toml
urusai_codegen/src/: lib.rs
