[package]
name = "urusai"
version = "0.1.0"
authors = [ "Kazakuri <kazakuri@urus.ai>" ]
edition = "2018"

[[bin]]
name = "urusai"
path = "src/main.rs"

[[bin]]
name = "urusai_worker"
path = "src/worker/main.rs"

[lib]
name = "urusai_lib"
path = "src/lib.rs"

[dependencies]
urusai_codegen = { path = "urusai_codegen" }
actix = "0.8.3"
actix-web = "1.0.2"
actix-files = "0.1.2"
actix-rt = "0.2.3"
bytes = "0.4.12"
diesel = { version = "1.4.2", features = [ "postgres", "extras", "uuidv07" ] }
diesel-derive-enum = { version = "0.4.4", features = [ "postgres" ] }
dotenv = "0.14.1"
chrono = { version = "0.4.6", features = ["serde"] }
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
serde_urlencoded = "0.5.5"
uuid = { version = "0.7.4", features = [ "v4", "serde" ] }
futures = "0.1.27"
sodiumoxide = "0.2.2"
log = "0.4.6"
env_logger = "0.6.1"
failure = "0.1.5"
askama = "0.8.0"
nanoid = "0.2.0"
r2d2 = "0.8.5"
regex = "1.1.7"
lazy_static = "1.3.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
faktory = "0.10.5"
native-tls = "0.2.3"
bcrypt = "0.4.0"
actix-identity = "0.1.0"

[features]
default = ["mq"]

mq = []
