[package]
name = "urusai"
version = "0.1.0"
authors = [ "Kazakuri <kazakuri@urus.ai>" ]
edition = "2018"

[[bin]]
name = "urusai"
path = "src/main.rs"

[[bin]]
name = "urusai_worker"
path = "src/worker/main.rs"

[lib]
name = "urusai_lib"
path = "src/lib.rs"

[dependencies]
actix-files = "0.2.1"
actix-identity = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
askama = "0.8.0"
bcrypt = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"] }
deadpool = "0.4.3"
deadpool-postgres = "0.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
faktory = "0.10.5"
futures = "0.3.1"
lazy_static = "1.4.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
log = "0.4.8"
nanoid = "0.2.0"
postgres-types = { version = "0.1.0", features = [ "derive" ] }
regex = "1.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
serde_urlencoded = "0.6.1"
sodiumoxide = "0.2.5"
tokio-postgres = { version = "0.5.1", features = [ "with-uuid-0_8", "with-chrono-0_4" ] }
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
thiserror = "1.0.9"

[features]
default = ["mq"]

mq = []
