[package]
name = "urusai"
version = "1.0.0"
authors = [ "Kazakuri <kazakuri@urus.ai>" ]
edition = "2018"

[[bin]]
name = "urusai"
path = "src/main.rs"

[lib]
name = "urusai_lib"
path = "src/lib.rs"

[dependencies]
actix-http = "=3.0.0-beta.5 "
actix-web = "=4.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-files = "0.6.0-beta.4"
actix-rt = "2.2.0"
askama = "0.10.5"
chrono = { version = "0.4.10", features = ["serde"] }
deadpool = "0.8.0"
deadpool-postgres = "0.8.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.8"
nanoid = "0.4.0"
postgres-types = { version = "0.2.1", features = [ "derive" ] }
regex = "1.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
serde_urlencoded = "0.7.0"
tokio-postgres = { version = "0.7.2", features = [ "with-uuid-0_8", "with-chrono-0_4" ] }
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
thiserror = "1.0.9"
